# AI-Calendar-Assistant

./: .env.example  .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  logging_conf.py  main.py  models.py  prompts.py  sgr.py
app/service/: calendar_client.py  google_calendar.py  llm_client.py
app/services/: calendar_client.py
app/utils/: repair.py  time.py
benchmarks/: sgr_bench.py
db/: alembic.ini  models.py  run_migrations.py
db/migrations/: env.py
db/migrations/versions/: 001_initial.py
infra/: docker-compose.yml
infra/keycloak/: realm-export.json
infra/prometheus/: prometheus.yml
services/api/: Dockerfile  config.py  deps.py  main.py  pyproject.toml
services/api/services/: google_calendar.py  llm_client.py  sqlite_store.py
services/api/utils/: repair.py
services/embedding/: Dockerfile  pyproject.toml
services/retrieval/: Dockerfile  pyproject.toml
tests/: conftest.py  test_google_client.py  test_models.py  test_sgr_loop.py
tests/integration/: test_migrations.py  test_vector_search.py
