[project]
name = "ai-calendar-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "MordXD",email = "kotkinegor78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn[pip] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.8.2,<3.0.0)",
    "openai (>=1.40.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-api-python-client (>=2.182.0,<3.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
