[project]
name = "ai-calendar-assistant"
version = "0.2.0"
description = "Production-oriented AI agent for calendar automation with RAG and hybrid search"
authors = [
    {name = "MordXD",email = "kotkinegor78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    # API Framework
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.1.0",

    # LLM & Embeddings
    "openai>=1.40.0",
    "sentence-transformers>=2.2.0",

    # Google Calendar
    "google-api-python-client>=2.182.0",
    "google-auth>=2.40.0",
    "google-auth-oauthlib>=1.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg>=3.1.0",
    "alembic>=1.12.0",

    # Search
    "opensearch-py>=2.0.0",

    # Cache
    "redis>=5.0.0",
    "hiredis>=2.3.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.0",

    # Utils
    "python-dotenv>=1.1.0",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Testing
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ARG", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers --strict-config"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
