[project]
name = "ai-calendar-assistant-retrieval"
version = "0.2.0"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "alembic>=1.12.0",
    "opensearch-py>=2.0.0",
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.1.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
